bloodc/src/parser/snapshots/bloodc__parser__tests__unit_struct.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 12,
                        start_line: 1,
                        start_col: 8,
                    },
                },
                type_params: None,
                body: Unit,
                span: Span {
                    start: 0,
                    end: 13,
                    start_line: 1,
                    start_col: 1,
                },
                is_union: false,
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 13,
        start_line: 1,
        start_col: 1,
    },
}
